--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
     "markitdown": "^0.0.4",
     "memorystore": "^1.6.7",
